hard-gists/7752095/run.log
=== Docker Run Log for 7752095 ===
Started at: Mi 29. Okt 17:17:22 CET 2025

[2025-10-29 17:17:23] START: Running container for 7752095
[2025-10-29 17:17:23] SUCCESS: Container d17520a5f6e55aa31753fc932f3f71ecd731b19eefc87f51bbf16fc2ff3705d4 started for 7752095
=== Container logs for 7752095 ===
  File "/snippet.py", line 13
    print "Generating image..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7752095 ===
[2025-10-29 17:17:25] INFO: Container d17520a5f6e55aa31753fc932f3f71ecd731b19eefc87f51bbf16fc2ff3705d4 has stopped
